--- a/src/index.html
+++ b/src/index.html
@@ -13,27 +13,27 @@
         <div class="wallpaper" id="app">
             <div class="header fx vmb">
                 <div class="top-bar sp upc fx">
-                    <div tabindex="6">Ru</div>
-                    <div tabindex="7">Search</div>
-                    <div tabindex="8">Busket</div>
+                    <div tabindex="7">Ru</div>
+                    <div tabindex="8">Search</div>
+                    <div tabindex="9">Busket</div>
                 </div>
                 <div class="mobile-bar"></div>
                 <div class="menu">
-                    <div class="logo">
+                    <a class="logo" tabindex="1">
                         <img src="./assets/logo.svg">
-                    </div>
-                    <nav class="nav" tabindex="1">Pictures</nav>
-                    <nav class="nav" tabindex="2">Stories</nav>
-                    <nav class="nav" tabindex="3">Typography</nav>
-                    <nav class="nav" tabindex="4">Purusimplism</nav>
-                    <nav class="nav" tabindex="5">About</nav>
+                    </a>
+                    <nav class="nav" tabindex="2">Pictures</nav>
+                    <nav class="nav" tabindex="3">Stories</nav>
+                    <nav class="nav" tabindex="4">Typography</nav>
+                    <nav class="nav" tabindex="5">Purusimplism</nav>
+                    <nav class="nav" tabindex="6">About</nav>
                 </div>
                 <div class="main">
                     <img src="./assets/whitecube.png">
                 </div>
             </div>
             <div class="services scroll-snap vmb sp">
-                <a class="service" tabindex="9">
+                <a class="service fx" tabindex="9">
                     <div class="icon">
                         <img src="./assets/telegram.svg">
                     </div>
@@ -41,7 +41,7 @@
                         Telegram
                     </div>
                 </a>
-                <a class="service" tabindex="10">
+                <a class="service fx" tabindex="10">
                     <div class="icon">
                         <img src="./assets/behance.svg">
                     </div>
@@ -49,7 +49,7 @@
                         Behance
                     </div>
                 </a>
-                <a class="service" tabindex="11">
+                <a class="service fx" tabindex="11">
                     <div class="icon">
                         <img src="./assets/twitter.svg">
                     </div>
@@ -57,7 +57,7 @@
                         Twitter
                     </div>
                 </a>
-                <a class="service" tabindex="12">
+                <a class="service fx" tabindex="12">
                     <div class="icon">
                         <img src="./assets/github.svg">
                     </div>
@@ -107,6 +107,7 @@
             <div class="text-block right sp scroll-snap">
                 <p>
                     Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here)
+                    Testdiv (insert long text here)
                 </p>
                 <div>
                     <button class="more right upc">
@@ -119,32 +120,32 @@
             <div class="columns scroll-snap vmb">
                 Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here)
             </div>
-            <div class="images scroll-snap fx vmb">
-                        <div class="img-col">
-                            <div class="image">
-                                <img src="./assets/d30beb754474438b8b73ebab4478bc08.svg">
-                            </div>
-                            <div class="img-txt">Pictures for interior</div>
-                        </div>
-                        <div class="img-col">
-                            <div class="image">
-                                <img src="./assets/d596cf768fa94b1c8ee568cd5d8682d9.svg">
-                            </div>
-                            <div class="img-txt">Merch</div>
-                        </div>
-                        <div class="img-col">
-                            <div class="image">
-                                <img src="./assets/d30beb754474438b8b73ebab4478bc08.svg">
-                            </div>
-                            <div class="img-txt">Collaboration</div>
-                        </div>
-                        <div class="img-col">
-                            <div class="image">
-                                <img src="./assets/d596cf768fa94b1c8ee568cd5d8682d9.svg">
-                            </div>
-                            <div class="img-txt">Urban art</div>
-                        </div>
+            <div class="stickers scroll-snap fx vmb">
+                <div class="sticker">
+                    <div class="sticker-title">
+                        20000
                     </div>
+                    <div class="sticker-desc">Pictures for interior</div>
+                </div>
+                <div class="sticker">
+                    <div class="sticker-title">
+                        23523
+                    </div>
+                    <div class="sticker-desc">Pictures for interior</div>
+                </div>
+                <div class="sticker">
+                    <div class="sticker-title">
+                        23523
+                    </div>
+                    <div class="sticker-desc">Pictures for interior</div>
+                </div>
+                <div class="sticker">
+                    <div class="sticker-title">
+                        23523
+                    </div>
+                    <div class="sticker-desc">Pictures for interior</div>
+                </div>
+            </div>
             <div class="footer">
 
                 <div class="col">
