--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-<!--        <div class="search-window">-->
-<!--            <div class="barmenu search-close active"></div>-->
-<!--            <input type="search">-->
-<!--        </div>-->
         <div class="wallpaper" id="app">
             <div class="header fx vmb">
                 <div class="top-bar sp upc fx">
                     <div tabindex="7">Ru</div>
                     <div tabindex="8">Search</div>
-                    <div tabindex="9">Busket</div>
+                    <div tabindex="9">Basket</div>
                 </div>
                 <div class="mobile-bar"></div>
                 <div class="menu">
@@ -77,30 +73,32 @@
                     <button class="next upc">next</button>
                 </div>
                 <div class="swiper">
-                    <div class="slide">
-                        <img src="./assets/cf457ac0d6e24659affa8a162297f095.svg">
-                    </div>
-                    <div class="slide">
-                        <img src="./assets/d30beb754474438b8b73ebab4478bc08.svg">
-                    </div>
-                    <div class="slide">
-                        <img src="./assets/d596cf768fa94b1c8ee568cd5d8682d9.svg">
-                    </div>
-                    <div class="slide">
-                        <img src="./assets/dc7cced321614008a1186a9ed5122710.svg">
-                    </div>
-                    <div class="slide">
-                        <img src="./assets/dd4918a529e6400a87ce5036106b9a37.svg">
-                    </div>
-                    <div class="slide">
-                        <img src="./assets/e3e9ad3ae171445dad2f0ce147b86857.svg">
-                    </div>
-                    <div class="slide">
-                        <img src="./assets/e5f11dd336814a72ade11d024aa853d2.svg">
+                    <div class="sw-fl">
+                        <div class="slide">
+                            <img src="./assets/cf457ac0d6e24659affa8a162297f095.svg">
+                        </div>
+                        <div class="slide">
+                            <img src="./assets/d30beb754474438b8b73ebab4478bc08.svg">
+                        </div>
+                        <div class="slide">
+                            <img src="./assets/d596cf768fa94b1c8ee568cd5d8682d9.svg">
+                        </div>
+                        <div class="slide">
+                            <img src="./assets/dc7cced321614008a1186a9ed5122710.svg">
+                        </div>
+                        <div class="slide">
+                            <img src="./assets/dd4918a529e6400a87ce5036106b9a37.svg">
+                        </div>
+                        <div class="slide">
+                            <img src="./assets/e3e9ad3ae171445dad2f0ce147b86857.svg">
+                        </div>
+                        <div class="slide">
+                            <img src="./assets/e5f11dd336814a72ade11d024aa853d2.svg">
+                        </div>
                     </div>
                 </div>
             </div>
-            <h2 class="sp">Decor</h2>
+            <h2 class="sp opt-w">Decor</h2>
             <div class="image-block scroll-snap vmb">
                 <img src="./assets/whitecube.png">
             </div>
@@ -116,8 +114,8 @@
                     </button>
                 </div>
             </div>
-            <h2 class="sp">Context in art</h2>
-            <div class="columns scroll-snap vmb">
+            <h2 class="sp opt-w">Context in art</h2>
+            <div class="columns scroll-snap vmb opt-w">
                 Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here) Testdiv (insert long text here)
             </div>
             <div class="stickers scroll-snap fx vmb">
